--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.13.6",
+    "morgan": "^1.9.0",
     "request": "^2.83.0"
-  },
-  "scripts": {
-    "start": "node server.js"
   }
 }
